--- a/carro-seguro/src/app/globals.css
+++ b/carro-seguro/src/app/globals.css
@@ -44,3 +44,20 @@ header {
 .div_botoes_cabecalho {
   @apply flex items-center gap-2;
 }
+/Menu/
+.ul_links {
+    @apply flex list-none gap-[2%] pb-[1%] bg-[var(--cor-principal)] mb-[1%];
+}
+
+.links {
+    @apply relative no-underline text-white transition-all duration-300 ease-in-out;
+}
+
+.links::after {
+    content: '';
+    @apply absolute w-0 h-[2px] -bottom-1 right-0 bg-white transition-all duration-300 ease-in-out;
+}
+
+.links:hover::after {
+    @apply w-full left-0 bg-white;
+}
