Estilizando página de Conta

--- a/carro-seguro/src/app/globals.css
+++ b/carro-seguro/src/app/globals.css
@@ -272,6 +272,51 @@ footer {
     @apply w-full left-0 bg-[var(--cor-principal)];
 }
 
+/* Conta */
+#container_main_conta {
+    @apply bg-[var(--cor-quartenaria)] max-w-[95vw] mx-auto shadow-md rounded-md;
+}
+
+#container_contato {
+    @apply pt-[2%] pl-[2%];
+}
+
+.titulo_conta {
+    @apply text-[2.1rem] pt-[1%] pl-[2%];
+}
+
+.texto_conta {
+    @apply pt-[1%] pl-[2%] text-[1.3rem];
+}
+
+.ul_conta {
+    @apply list-none pt-[2%] pl-[2%];
+}
+
+.ul_conta > li {
+    @apply text-[1.6em] pb-[3%];
+}
+
+.botoes_conta{
+    @apply flex gap-[10px]
+}
+
+.link_editar_conta {
+    @apply bg-[var(--cor-principal)] text-white inline-block relative ml-[2%] mb-[2%] py-[1%] px-[2%] rounded transition-transform duration-300;
+}
+
+.link_editar_conta:hover {
+    @apply scale-110;
+}
+
+.btn_excluir_conta {
+    @apply bg-red-500 text-white inline-block relative ml-[2%] mb-[2%] py-[1%] px-[2%] rounded transition-transform duration-300;
+}
+
+.btn_excluir_conta:hover {
+    @apply scale-110;
+}
+
 /* Login */
 
 .container_login{
