--- a/carro-seguro/src/app/globals.css
+++ b/carro-seguro/src/app/globals.css
@@ -44,6 +44,7 @@ header {
 .div_botoes_cabecalho {
   @apply flex items-center gap-2;
 }
+
 /*Menu*/
 .ul_links {
     @apply flex list-none gap-[2%] pb-[1%] bg-[var(--cor-principal)] mb-[1%];
@@ -61,6 +62,8 @@ header {
 .links:hover::after {
     @apply w-full left-0 bg-white;
 }
+
+
 /* Rodape */
 footer {
     @apply mt-[3%] bg-[var(--cor-principal)] py-[2%] flex flex-col items-center shadow-md;
@@ -69,6 +72,8 @@ footer {
 .copyright {
     @apply mt-[2%] text-white text-sm;
 }
+
+
 /* PaginaInicial */
 #container_main {
     @apply bg-[var(--cor-quartenaria)] max-w-[95vw] mx-auto shadow-[0px_2px_7px_rgba(0,0,0,0.185)] rounded-[5px];
@@ -122,6 +127,7 @@ footer {
 .icone_li {
     @apply mr-1;
 }
+
 /* Diagnostico */
 
 #container_main {
@@ -191,7 +197,6 @@ footer {
 .btn_enviar_problema:hover {
     @apply scale-110;
 }
-
 /* faq */
 .faq_descritivo4 {
     @apply pb-[4%];
@@ -316,6 +321,7 @@ footer {
 .btn_excluir_conta:hover {
     @apply scale-110;
 }
+
 
 /* EDITAR CONTA */
 
@@ -453,6 +459,37 @@ input {
     @apply scale-[1.1];
 }
 
+/* Pagina de Oficinas */
+
+.container_oficinas {
+    @apply bg-[var(--cor-quartenaria)] max-w-[95vw] mx-auto shadow-[0px_2px_7px_rgba(0,0,0,0.185)] rounded-[5px] p-[20px];
+}
+
+.container_oficinas > h1 {
+    @apply text-[2rem] pb-[2%]; 
+}
+
+table {
+    @apply w-[80%] border-collapse bg-white shadow-lg mx-auto; 
+}
+
+table, th, td {
+    @apply border border-black; 
+}
+
+th, td {
+    @apply px-[10px] py-[10px] text-left; 
+}
+
+th {
+    @apply bg-[#f2f2f2] font-bold; 
+}
+
+tbody tr:nth-child(even) {
+    @apply bg-[#f9f9f9];
+}
+
+
 /* Tabela de diagnostico*/
 
 .subtitulo_tabela_pecas {
@@ -484,38 +521,565 @@ input {
     @apply w-full left-0 bg-black;
 }
 
-/* Pagina de Oficinas */
-
-.container_oficinas {
-    @apply bg-[var(--cor-quartenaria)] max-w-[95vw] mx-auto shadow-[0px_2px_7px_rgba(0,0,0,0.185)] rounded-[5px] p-[20px];
-}
-
-.container_oficinas > h1 {
-    @apply text-[2rem] pb-[2%]; 
-}
-
-table {
-    @apply w-[80%] border-collapse bg-white shadow-lg mx-auto; 
-}
-
-table, th, td {
-    @apply border border-black; 
-}
-
-th, td {
-    @apply px-[10px] py-[10px] text-left; 
-}
-
-th {
-    @apply bg-[#f2f2f2] font-bold; 
-}
-
-tbody tr:nth-child(even) {
-    @apply bg-[#f9f9f9];
-}
-
 /* Página de erro 404 */
 
 .imagem_erro_404{
     @apply m-auto py-[8%] w-[50vw]
+}
+
+/* Media Queries Personalizadas */
+/* Responsividade */
+
+@media (max-width: 1420px) {
+    .imagem01 {
+        @apply w-[40vw] ml-[7%];
+    }
+
+    .botao_cadastro {
+        @apply text-[1.3rem];
+    }
+}
+
+@media (max-width: 1300px) {
+    .icones_cabecalho {
+        @apply w-[4vw];
+    }
+
+    table {
+        @apply text-[0.9rem];
+    }
+
+    #resposta_botao {
+        @apply w-[90vw];
+    }
+}
+
+@media (max-width: 1250px) {
+    .imagem01 {
+        @apply w-[50vw] ml-[2%];
+    }
+
+    .descritivo01 {
+        @apply text-[1rem];
+    }
+
+    .descritivo {
+        @apply text-[1rem];
+    }
+
+    .li_main {
+        @apply text-[1rem];
+    }
+}
+
+@media (max-width: 1200px) {
+    .integrante {
+        @apply w-[40vw];
+    }
+}
+
+@media (max-width: 1130px) {
+    .texto_imagem {
+        @apply flex-col-reverse;
+    }
+
+    .imagem01 {
+        @apply w-[50vw] ml-[0%];
+    }
+
+    .descritivo01 {
+        @apply text-[1rem] w-[90vw] mt-[2%];
+    }
+
+    .descritivo {
+        @apply text-[1rem];
+    }
+
+    .li_main {
+        @apply text-[1rem];
+    }
+
+    .botao_contato {
+        @apply w-[15vw];
+    }
+}
+
+@media (max-width: 1060px) {
+    .integrante {
+        @apply w-[45vw];
+    }
+
+    .input {
+        @apply text-[1.3rem];
+    }
+}
+
+@media (max-width: 980px) {
+    .div_form input {
+        @apply w-[70vw];
+    }
+
+    .div_form select {
+        @apply w-[30vw];
+    }
+
+    .botao_cadastro {
+        @apply text-[1.1rem] py-[15px];
+    }
+
+    table {
+        @apply text-[0.8rem];
+    }
+}
+
+@media (max-width: 930px) {
+    .imagem01 {
+        @apply w-[60vw] ml-[0%];
+    }
+
+    .icone_li {
+        @apply w-[7vw];
+    }
+
+    .descritivo01 {
+        @apply text-[1rem] w-[90vw] mt-[2%];
+    }
+
+    .descritivo {
+        @apply text-[1rem];
+    }
+
+    .li_main {
+        @apply text-[1rem];
+    }
+
+    .input_login {
+        @apply w-[50vw];
+    }
+}
+
+@media (max-width: 890px) {
+    .imagem_dados > .imagem_integrante {
+        @apply w-[20vw];
+    }
+
+    .dados_integrante {
+        @apply text-[1rem];
+    }
+}
+
+@media (max-width: 880px) {
+    .titulo_cabecalho {
+        @apply text-[2.2rem];
+    }
+
+    .icones_cabecalho {
+        @apply w-[5vw];
+    }
+}
+
+@media (max-width: 820px) {
+    .titulo_main {
+        @apply text-[1.8rem];
+    }
+
+    .imagem01 {
+        @apply w-[60vw] ml-[0%];
+    }
+
+    .icone_li {
+        @apply w-[7vw];
+    }
+
+    .descritivo01 {
+        @apply text-[1rem] w-[90vw] mt-[2%];
+    }
+
+    .descritivo {
+        @apply text-[1rem];
+    }
+
+    .li_main {
+        @apply text-[1rem];
+    }
+
+    .botao_contato {
+        @apply w-[15vw] text-[1rem];
+    }
+
+    .flex_contato > .icones_contato {
+        @apply w-[7vw];
+    }
+
+    .input {
+        @apply w-[50vw];
+    }
+
+    .botao_cadastro {
+        @apply text-[1.1rem] py-[15px] w-[20vw];
+    }
+
+    .texto_form_cadastro {
+        @apply text-[1.6rem];
+    }
+}
+
+@media (max-width: 760px) {
+    .integrante {
+        @apply w-[60vw];
+    }
+
+    .imagem_dados > .imagem_integrante {
+        @apply w-[20vw];
+    }
+
+    .dados_integrante {
+        @apply text-[1rem];
+    }
+
+    .input_login {
+        @apply w-[60vw];
+    }
+
+    .button {
+        @apply text-[1.2rem];
+    }
+}
+
+@media (max-width: 730px) {
+    .subtitulo_tabela_pecas {
+        @apply text-[1.5rem];
+    }
+
+    .orçamento_pecas {
+        @apply text-[1.3rem];
+    }
+
+    .mensagem_link_oficinas {
+        @apply text-[1.1rem];
+    }
+
+    #resposta_botao {
+        @apply text-[0.9rem];
+    }
+
+    .input_select {
+        @apply text-[1rem];
+    }
+}
+
+@media (max-width: 700px) {
+    .div_form input {
+        @apply w-[70vw];
+    }
+    
+    .div_form select {
+        @apply w-[40vw];
+    }
+}
+
+@media (max-width: 690px) {
+    .titulo_main {
+        @apply text-[1.5rem];
+    }
+
+    .subtitulo {
+        @apply text-[1.3rem];
+    }
+
+    .imagem01 {
+        @apply w-[60vw] ml-[0%];
+    }
+
+    .icone_li {
+        @apply w-[8vw];
+    }
+
+    .descritivo01 {
+        @apply text-[1rem] w-[90vw] mt-[2%];
+    }
+
+    .descritivo {
+        @apply text-[1rem];
+    }
+
+    .li_main {
+        @apply text-[1rem];
+    }
+
+    .botao_contato {
+        @apply w-[20vw] text-[1rem];
+    }
+    
+    .flex_contato > .icones_contato {
+        @apply w-[7vw];
+    }
+
+    .input_cadastro {
+        @apply w-[60vw] text-[1.2rem];
+    }
+
+    .botao_cadastro {
+        @apply text-[1.1rem] py-[15px] w-[26vw];
+    }
+
+    .texto_form_cadastro {
+        @apply text-[1.5rem];
+    }
+}
+
+@media (max-width: 640px) {
+    .integrante {
+        @apply w-[60vw];
+    }
+    
+    .imagem_dados > .imagem_integrante {
+        @apply w-[20vw];
+    }
+
+    .dados_integrante {
+        @apply text-[0.9rem];
+    }
+}
+
+@media (max-width: 630px) {
+    .titulo_cabecalho {
+        @apply text-[2rem];
+    }
+    
+    .icones_cabecalho {
+        @apply w-[5vw];
+    }
+
+    .links {
+        @apply text-[0.8rem];
+    }
+
+    .copyright {
+        @apply text-[0.6rem];
+    }
+}
+
+@media (max-width: 580px) {
+    .integrante {
+        @apply w-[70vw];
+    }
+
+    .imagem_dados > .imagem_integrante {
+        @apply w-[20vw];
+    }
+
+    .dados_integrante {
+        @apply text-[0.9rem];
+    }
+
+    .titulo_conta {
+        @apply text-[1.8rem];
+    }
+
+    .texto_conta {
+        @apply text-[1.2rem];
+    }
+
+    .ul_conta li {
+        @apply text-[1.4rem];
+    }
+
+    .input {
+        @apply w-[60vw];
+    }
+}
+
+@media (max-width: 530px) {
+    .titulo_cabecalho {
+        @apply text-[1.7rem];
+    }
+
+    .icones_cabecalho {
+        @apply w-[6vw];
+    }
+
+    .links {
+        @apply text-[0.8rem];
+    }
+
+    .input_login {
+        @apply w-[60vw];
+    }
+
+    .button {
+        @apply text-[1.2rem] py-[15px] w-[20vw];
+    }
+
+    .input_cadastro {
+        @apply w-[60vw] text-[1.2rem];
+    }
+
+    .botao_cadastro {
+        @apply text-[1.1rem] py-[15px] w-[26vw];
+    }
+
+    .texto_form_cadastro {
+        @apply text-[1.5rem];
+    }
+}
+
+@media (max-width: 490px) {
+    .titulo_cabecalho {
+        @apply text-[1.5rem];
+    }
+    
+    .icones_cabecalho {
+        @apply w-[6vw];
+    }
+
+    .links {
+        @apply text-[0.8rem];
+    }
+
+    .div_form input {
+        @apply w-[70vw];
+    }
+    
+    .div_form select {
+        @apply w-[40vw];
+    }
+
+    .form_diagnostico label {
+        @apply text-[1.2rem];
+    }
+
+    .botao_contato {
+        @apply w-[25vw] text-[1rem];
+    }
+    
+    .flex_contato > .icones_contato {
+        @apply w-[8vw];
+    }
+
+    .integrante {
+        @apply w-[70vw];
+    }
+    
+    .imagem_dados > .imagem_integrante {
+        @apply w-[30vw];
+    }
+
+    .dados_integrante {
+        @apply text-[0.9rem];
+    }
+
+    .input {
+        @apply w-[70vw];
+    }
+
+    .titulo_form {
+        @apply text-[2.5rem];
+    }
+
+    .input_cadastro {
+        @apply w-[60vw] text-[1.2rem];
+    }
+
+    .botao_cadastro {
+        @apply text-[1.1rem] p-4 w-[30vw];
+    }
+
+    .texto_form_cadastro {
+        @apply text-[1.5rem];
+    }
+}
+
+@media (max-width: 390px) {
+    .titulo_cabecalho {
+        @apply text-[1.2rem];
+    }
+    
+    .icones_cabecalho {
+        @apply w-[7vw];
+    }
+
+    .links {
+        @apply text-[0.7rem];
+    }
+
+    .div_form input {
+        @apply w-[70vw];
+    }
+    
+    .div_form select {
+        @apply w-[50vw];
+    }
+
+    .form_diagnostico label {
+        @apply text-[1.1rem];
+    }
+
+    .botao_contato {
+        @apply w-[26vw] text-[1rem];
+    }
+    
+    .flex_contato > .icones_contato {
+        @apply w-[9vw];
+    }
+
+    .integrante {
+        @apply w-[80vw];
+    }
+    
+    .imagem_dados > .imagem_integrante {
+        @apply w-[33vw];
+    }
+
+    .dados_integrante {
+        @apply text-[0.9rem];
+    }
+
+    .input {
+        @apply w-[75vw] text-[1.2rem];
+    }
+
+    .titulo_form {
+        @apply text-[2.3rem];
+    }
+
+    .div_texto_login p {
+        @apply text-[1.1rem];
+    }
+
+    .input_cadastro {
+        @apply w-[60vw] text-[1.1rem];
+    }
+
+    .botao_cadastro {
+        @apply text-[1rem] p-4 w-[35vw];
+    }
+
+    .texto_form_cadastro {
+        @apply text-[1.3rem];
+    }
+
+    .campos_obrigatorios {
+        @apply text-[0.8rem];
+    }
+
+    .subtitulo_tabela_pecas {
+        @apply text-[1.3rem];
+    }
+
+    .orçamento_pecas {
+        @apply text-[1.2rem];
+    }
+
+    .mensagem_link_oficinas {
+        @apply text-[1rem];
+    }
+
+    #resposta_botao {
+        @apply text-[0.8rem];
+    }
+
+    .input_select {
+        @apply text-[0.9rem];
+    }
 }
